--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -66,7 +66,7 @@
   }
 
   &__btn {
-    align-self: center;
+    align-self: start;
     justify-self: start;
   }
 }
