--- a/src/sass/_realtors.scss
+++ b/src/sass/_realtors.scss
@@ -30,6 +30,5 @@
   &__sales {
     color: $color-grey-light-2;
     text-transform: uppercase;
-    font-size: 0.8rem;
   }
 }
